tests/spec/emit/snapshots/two_defaults_on_one_local_read_their_own_values.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:strconv"
  
  fn test() {
    let mut m = Map.new<string, int>()
    m["a"] = 1
    let v = m.get("zz")
    let total = v.unwrap_or(1) + v.unwrap_or(2)
    if total != 3 { panic(f"two defaults on a lookup gave {total}") }
    let r = strconv.Atoi("bad")
    let pair = (r.unwrap_or(7), r.unwrap_or(8))
    if pair.0 != 7 || pair.1 != 8 { panic("two defaults on a result read one payload") }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func test() {
	m := make(map[string]int)
	m["a"] = 1
	v, ok := m["zz"]
	ret := v
	if !ok {
		ret = 1
	}
	ret_1 := v
	if !ok {
		ret_1 = 2
	}
	total := ret + ret_1
	if total != 3 {
		panic(fmt.Sprintf("two defaults on a lookup gave %d", total))
	}
	r, err := strconv.Atoi("bad")
	ret_2 := r
	if err != nil {
		ret_2 = 7
	}
	ret_3 := r
	if err != nil {
		ret_3 = 8
	}
	pair := lisette.MakeTuple2[int, int](ret_2, ret_3)
	if pair.First != 7 || pair.Second != 8 {
		panic("two defaults on a result read one payload")
	}
}
