tests/spec/emit/snapshots/two_versioned_modules_with_distinct_package_names_coexist.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:example.com/bubbletea/v2"
  import "go:example.com/lipgloss/v2"
  
  fn make() -> Ref<tea.Program> {
    let _ = lipgloss.Style{}
    &tea.Program{}
  }
---
package main

import (
	tea "example.com/bubbletea/v2"
	lipgloss "example.com/lipgloss/v2"
)

func make_() *tea.Program {
	_ = lipgloss.Style{}
	return &tea.Program{}
}
