tests/spec/emit/snapshots/type_alias_chained.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct Point { pub x: int, pub y: int }\n\ntype Location = Point\ntype GeoPoint = Location\n\nfn origin() -> GeoPoint {\n  Point { x: 0, y: 0 }\n}\n"
---
package main

type Point struct {
	X int
	Y int
}

type Location = Point

type GeoPoint = Location

func origin() GeoPoint {
	return Point{
		X: 0,
		Y: 0,
	}
}
