tests/spec/emit/snapshots/type_alias_chained_slice_iter_and_index.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type Numbers = Slice<int>
  type MoreNumbers = Numbers
  
  fn first(nums: MoreNumbers) -> int {
    nums[0]
  }
  
  fn sum(nums: MoreNumbers) -> int {
    let mut total = 0
    for n in nums {
      total += n
    }
    total
  }
---
package main

type Numbers = []int

type MoreNumbers = Numbers

func first(nums MoreNumbers) int {
	return nums[0]
}

func sum(nums MoreNumbers) int {
	total := 0
	for _, n := range nums {
		total += n
	}
	return total
}
