tests/spec/emit/snapshots/type_alias_enum_unit_variant.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum Color {
    Red,
    Green,
    Blue,
  }
  
  type MyColor = Color
  
  fn test() -> MyColor {
    MyColor.Red
  }
---
package main

func MakeColorRed() Color {
	return Color{Tag: ColorRed}
}

func MakeColorGreen() Color {
	return Color{Tag: ColorGreen}
}

func MakeColorBlue() Color {
	return Color{Tag: ColorBlue}
}

type ColorTag uint8

const (
	ColorRed ColorTag = iota
	ColorGreen
	ColorBlue
)

type Color struct {
	Tag ColorTag
}

type MyColor = Color

func test() MyColor {
	return MakeColorRed()
}
