tests/spec/emit/snapshots/type_alias_field_access.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct Point { pub x: int, pub y: int }\n\ntype Location = Point\n\nfn get_x(loc: Location) -> int {\n  loc.x\n}\n"
---
package main

import "fmt"

type Point struct {
	X int
	Y int
}

func (p Point) String() string {
	return fmt.Sprintf("Point { x: %v, y: %v }", p.X, p.Y)
}

type Location = Point

func get_x(loc Location) int {
	return loc.X
}
