tests/spec/emit/snapshots/type_alias_generic_in_param_and_return.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type Numbers = Slice<int>
  
  fn sum(nums: Numbers) -> int {
    let mut total = 0
    for n in nums {
      total += n
    }
    total
  }
---
package main

type Numbers = []int

func sum(nums Numbers) int {
	total := 0
	for _, n := range nums {
		total += n
	}
	return total
}
