tests/spec/emit/snapshots/type_alias_generic_tuple_struct_constructor.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Wrapper<T>(T)
  type W<T> = Wrapper<T>
  
  fn test() -> W<int> {
    W(5)
  }
---
package main

type Wrapper[T any] struct {
	F0 T
}

type W[T any] = Wrapper[T]

func test() W[int] {
	return Wrapper[int]{F0: 5}
}
