tests/spec/emit/snapshots/type_alias_in_return_type.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct Point { pub x: int, pub y: int }\n\ntype Location = Point\n\nfn origin() -> Location {\n  Point { x: 0, y: 0 }\n}\n"
---
package main

type Point struct {
	X int
	Y int
}

type Location = Point

func origin() Location {
	return Point{
		X: 0,
		Y: 0,
	}
}
