tests/spec/emit/snapshots/type_alias_in_struct_field.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Inner { pub val: int }
  
  type Wrapper = Inner
  
  struct Outer { pub item: Wrapper }
  
  fn get_val(o: Outer) -> int {
    o.item.val
  }
---
package main

type Inner struct {
	Val int
}

type Wrapper = Inner

type Outer struct {
	Item Wrapper
}

func getVal(o Outer) int {
	return o.Item.Val
}
